# rust-auth-api

./: .env  Cargo.toml
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
