[package]
name = "user-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
argon2 = { version = "*", features = ["password-hash"] }
jsonwebtoken = "9.3.1"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.14"
dotenvy = "0.15.7"
rand_core = "0.9.3"
rand = "0.9.1"
