[package]
name = "user-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
] }
uuid = { version = "*", features = ["serde", "v4"] }
argon2 = { version = "*", features = ["rand"] }
base64 = "0.22.1"
rand_core = "0.9.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
hex = "0.4.3"
